[tool.poetry]
name = "flow"
version = "0.1.0"
description = ""
authors = ["Carlos Valdivia <vpcarlos97@gmail.com>"]

[tool.poetry.scripts]
flow = "flow.main:app"

[tool.poetry.dependencies]
python = ">=3.7"
typer = {extras = ["all"], version = "^0.4.0"}
GitPython = "^3.1.24"
semantic-version = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
